# led-dot-matrix

./: CMakeLists.txt  LICENSE  README.md  main.cpp
inc/: FrameBuilder.h  FrameBuilderSpiConverter.h  NullPointerException.h  Registers.h  SpiController.h  SpiConvertible.h  Workspace.h  WorkspaceInterface.h
inc/interfaces/: FrameBuilderInterface.h  SpiConvertible.h  SpiTransmitter.h
src/: FrameBuilder.cpp  FrameBuilderSpiConverter.cpp  NullPointerException.cpp  SpiController.cpp  Workspace.cpp
tests/: CMakeLists.txt  test.cpp
tests/FrameBuilder/: FrameBuilderTests.cpp  WorkspaceStub.cpp  WorkspaceStub.h
tests/FrameBuilderSpiConverter/: FrameBuilderSpiConverterTests.cpp  FrameBuilderStub.cpp  FrameBuilderStub.h
tests/SpiController/: SpiControllerTests.cpp  SpiConvertibleStub.cpp  SpiConvertibleStub.h  SpiTransmitterMock.cpp  SpiTransmitterMock.h
tests/Workspace/: WorkspaceTests.cpp
